add style in signup page template with bootstrap

--- a/authentication/templates/user_creation_view.html
+++ b/authentication/templates/user_creation_view.html
@@ -2,10 +2,81 @@
 
 {% block content %}
 
-    <form method="post">
-        {{ form.as_p }}
-        {% csrf_token %}
-        <input type="submit" value="SignIn">
-    </form>
+<form method="post" class="h-75">
+    {% csrf_token %}
+
+    <div class="d-flex flex-column justify-content-center align-items-center h-100">
+
+        <div class="mb-3 mt-5 pt-5">
+            <h1 class="fw-bold mt-5">
+                Signup
+            </h1>
+        </div>
+    
+        <div class="row w-50">
+            <div class="col-lg-6 col-md-6 col-12 mb-3">
+                <label for="exampleInputEmail1" class="form-label">
+                     {{ form.first_name.label}} 
+                </label>
+                {{ form.first_name }}
+              </div>
+
+              <div class="col-lg-6 col-md-6 col-12 mb-3">
+                <label for="exampleInputEmail1" class="form-label">
+                     {{ form.last_name.label}} 
+                </label>
+                {{ form.last_name }}
+              </div>
+
+            <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">
+                     {{ form.username.label}} 
+                </label>
+                {{ form.username }}
+              </div>
+
+              <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">
+                     {{ form.email.label}} 
+                </label>
+                {{ form.email }}
+              </div>
+
+              <div class="mb-3">
+                <label for="exampleInputPassword1" class="form-label">
+                     {{ form.password1.label }} 
+                </label>
+                {{ form.password1 }}
+              </div>
+
+              <div class="mb-3">
+                <label for="exampleInputPassword1" class="form-label">
+                     {{ form.password2.label }} 
+                </label>
+                {{ form.password2 }}
+              </div>
+
+              {% if message %}
+              <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                {{ message }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+              </div>
+              {% endif %}
+              
+              <div class="mb-3">
+                <button type="submit" class="btn btn-primary w-100 mb-3">Submit</button>
+              </div>
+
+              <div class="form-text text-center" id="basic-addon4">
+                Have an account? <a href="{% url 'login' %}">Login</a>
+                    <br />
+                <a href="#">Reset password</a>
+              </div>
+        </div>
+        
+
+    </div>
+
+</form>
 
 {% endblock content %}
