--- a/user_profile/templates/user_profile.html
+++ b/user_profile/templates/user_profile.html
@@ -27,7 +27,7 @@
               
             </div>
             <div class="card-footer text-body-secondary">
-              <a href="#" class="btn btn-primary">Edit Profile</a>
+              <a href="{% url 'edit-profile' %}" class="btn btn-primary">Edit Profile</a>
             </div>
           </div>
     </div>
