--- a/user_profile/templates/user_profile.html
+++ b/user_profile/templates/user_profile.html
@@ -31,7 +31,7 @@
                 <a href="{% url 'edit-profile' %}" class="btn btn-primary w-100">Edit Profile</a>
               </li>
               <li class="list-group-item">
-                <a href="#" class="btn btn-primary w-100">Change Password</a>
+                <a href="{% url 'change-password' %}" class="btn btn-primary w-100">Change Password</a>
               </li>
             </ul>
           
