add profile link for each user

--- a/user_profile/templates/all_users_profile.html
+++ b/user_profile/templates/all_users_profile.html
@@ -22,9 +22,9 @@
                         <p class="card-text">
                           {{ user.bio }}
                         </p>
-                        <button type="button" class="btn btn-outline-info">
+                        <a href="{% url 'single-profile' user.username %}" type="button" class="btn btn-outline-info">
                           View profile
-                        </button>
+                        </a>
                      </div>
                 </div>
             </div>
