--- a/blog/templates/home_page.html
+++ b/blog/templates/home_page.html
@@ -30,9 +30,11 @@
                     </span>
                 </div>
                 <div class="px-4">
-                    <h2 class="card-title fw-bold">
-                        {{ post.title }}
-                    </h2>
+                    <a href="{% url 'single-blog' post.slug %}" style="color: inherit; text-decoration: none;">
+                        <h2 class="card-title fw-bold">
+                            {{ post.slug }}
+                        </h2>
+                    </a>
                     <p class="card-text">
                         <small class="text-body-secondary fw-light">
                             Last updated {{ post.date }}
