add edit button link in single blog for blog posted by their author

--- a/blog/templates/single_blog_view.html
+++ b/blog/templates/single_blog_view.html
@@ -50,6 +50,13 @@
             </div>
         </div>
     </div>
+
+    {% if request.user.is_authenticated and blog.author == request.user %}
+      <div class="">
+          <a href="{% url 'edit-blog' blog.slug %}" class="btn btn-primary">Edit</a>
+          <button class="btn btn-danger">Delete blog</button>
+      </div>
+    {% endif %}
          
 </div>
 
