--- a/blog/templates/single_blog_view.html
+++ b/blog/templates/single_blog_view.html
@@ -52,9 +52,41 @@
     </div>
 
     {% if request.user.is_authenticated and blog.author == request.user %}
-      <div class="">
+      <div>
           <a href="{% url 'edit-blog' blog.slug %}" class="btn btn-primary">Edit</a>
-          <button class="btn btn-danger">Delete blog</button>
+
+            <button 
+                class="btn btn-danger"
+                type="button" 
+                data-bs-toggle="modal"
+                data-bs-target="#staticBackdrop"
+            >
+                Delete blog
+            </button>
+
+
+            <!-- here is the modal -->
+            <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        Are you sure you want to delete this blog post? This action cannot be undone.
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                      <form method="post">
+                        {% csrf_token %}
+                        {{ form }}
+                        <input type="submit" class="btn btn-danger" value="Delete">
+                      </form>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              
       </div>
     {% endif %}
          
