--- a/blog/templates/home_page.html
+++ b/blog/templates/home_page.html
@@ -32,7 +32,7 @@
                 <div class="px-4">
                     <a href="{% url 'single-blog' post.slug %}" style="color: inherit; text-decoration: none;">
                         <h2 class="card-title fw-bold">
-                            {{ post.slug }}
+                            {{ post.title }}
                         </h2>
                     </a>
                     <p class="card-text">
