add meta tags in base.html to match any screen size and also meta charset

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>{% block title %}{% endblock %}</title>
+  <meta charset="utf-8">
+    <title>{% block title %}{% endblock %}</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  
   {% load bootstrap5 %}
   {% bootstrap_css %}
   {% bootstrap_javascript %}
