--- a/user_profile/templates/single_user_profile.html
+++ b/user_profile/templates/single_user_profile.html
@@ -5,7 +5,7 @@
 
 <div class="d-flex flex-column justify-content-start align-items-center mt-5 h-50">
 
-    <div class="w-75">
+    <div class="w-75 mb-4">
         <div class="card text-center">
             <div class="card-header py-5">
               
@@ -30,6 +30,49 @@
             </div>
           </div>
     </div>
+
+    <div class="w-75 mt-4 px-3 justify-content-center border border-2 border-info rounded">
+
+      <div class="text-left my-3">
+        <h2 type="button" class="btn btn-info fw-bold fs-4">
+          @{{ user.username }} blogs
+        </h2>
+      </div>
+
+      {% for post in blogs %}
+          <div class="card mb-3" style="background-color: #f0f0f0;">            
+              {% if post.cover %}
+                  <img src="{{ post.cover.url }}" class="w-auto" style="height: 150px; object-fit: cover;" alt="{{ post.title }}">
+              {% endif %}
+              <div class="card-body">
+                  <div>
+                      {% if post.author.profile_photo %}
+                          <img src="{{ post.author.profile_photo.url }}" class="border border-2 rounded-circle mx-auto" style="width: 30px; height: 30px;" alt="{{ profile.username}}'s profile photo">
+                      {% else %}
+                          <img src="https://vectorified.com/images/no-profile-picture-icon-24.jpg" class="border border-2 rounded-circle mx-auto" style="width: 30px; height: 30px;" alt="no profile photo">
+                      {% endif %}
+                      <span class="fw-medium">
+                          <a href="{% url 'single-profile' post.author.username %}" style="color: inherit; text-decoration: none;">
+                              @{{ post.author.username }}
+                          </a>
+                      </span>
+                  </div>
+                  <div class="px-4">
+                      <a href="{% url 'single-blog' post.slug %}" style="color: inherit; text-decoration: none;">
+                          <h2 class="card-title fw-bold">
+                              {{ post.title }}
+                          </h2>
+                      </a>
+                      <p class="card-text">
+                          <small class="text-body-secondary fw-light">
+                              Last updated {{ post.date }}
+                          </small>
+                      </p>
+                  </div>
+              </div>
+          </div>
+      {% endfor %}          
+  </div>
     
 
 </div>
