add draft input in forms and also in template to be render

--- a/blog/templates/new_blog_post.html
+++ b/blog/templates/new_blog_post.html
@@ -36,6 +36,13 @@
                 {{ form.content }}
               </div>
 
+              <div class="mb-3">
+                {{ form.draft }}
+                <label class="form-check-label">
+                  Save as draft
+                </label>
+              </div>
+
 
               {% if message %}
               <div class="alert alert-warning alert-dismissible fade show" role="alert">
