--- a/blog/templates/single_blog_view.html
+++ b/blog/templates/single_blog_view.html
@@ -52,18 +52,35 @@
     </div>
 
     {% if request.user.is_authenticated and blog.author == request.user %}
-      <div>
-          <a href="{% url 'edit-blog' blog.slug %}" class="btn btn-primary">Edit</a>
+      <div class="d-flex">
 
+        <!-- edit button  -->
+          <a href="{% url 'edit-blog' blog.slug %}" class="btn btn-primary mr-1">Edit</a>
+
+
+          <!-- draft button -->
+          <form method="post">
+            {% csrf_token %}
+            {{ draft_form }}
+            <button type="submit" class="btn btn-info mx-1">
+                {% if blog.draft == False %}
+                    Add to draft
+                {% else %}
+                    Publish
+                {% endif %}
+            </button>
+          </form>
+
+
+          <!-- delete modal button -->
             <button 
-                class="btn btn-danger"
+                class="btn btn-danger mx-1"
                 type="button" 
                 data-bs-toggle="modal"
                 data-bs-target="#staticBackdrop"
             >
                 Delete blog
             </button>
-
 
             <!-- here is the modal -->
             <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
@@ -86,6 +103,7 @@
                   </div>
                 </div>
               </div>
+              <!-- end of the modal -->
               
       </div>
     {% endif %}
